--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </style>
     </head>
     <body>
-        <h1>Image Index</h1>
+        <h1>一休github简易图床系统</h1>
         <table>
             <tr>
                 <th>缩略图</th>
