--- a/index.html
+++ b/index.html
@@ -144,6 +144,12 @@
             </tr>
             
             <tr>
+                <td><img src="https://github.com/yixiu001/Figurebed/raw/main/blog/about/logo.jpg" alt="logo.jpg"></td>
+                <td><a href="https://github.com/yixiu001/Figurebed/raw/main/blog/about/logo.jpg" target="_blank">https://github.com/yixiu001/Figurebed/raw/main/blog/about/logo.jpg</a></td>
+                <td><a href="https://cdn.jsdelivr.net/gh/yixiu001/Figurebed@main/blog/about/logo.jpg" target="_blank">https://cdn.jsdelivr.net/gh/yixiu001/Figurebed@main/blog/about/logo.jpg</a></td>
+            </tr>
+            
+            <tr>
                 <td><img src="https://github.com/yixiu001/Figurebed/raw/main/blog/bg/bg4.jpg" alt="bg4.jpg"></td>
                 <td><a href="https://github.com/yixiu001/Figurebed/raw/main/blog/bg/bg4.jpg" target="_blank">https://github.com/yixiu001/Figurebed/raw/main/blog/bg/bg4.jpg</a></td>
                 <td><a href="https://cdn.jsdelivr.net/gh/yixiu001/Figurebed@main/blog/bg/bg4.jpg" target="_blank">https://cdn.jsdelivr.net/gh/yixiu001/Figurebed@main/blog/bg/bg4.jpg</a></td>
