--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
                 </tr>
         
             <tr>
+                <td><img src="https://github.com/yixiu001/Figurebed/raw/main/youtube/US.KG注册.png" alt="US.KG注册.png"></td>
+                <td><a href="https://github.com/yixiu001/Figurebed/raw/main/youtube/US.KG注册.png" target="_blank">https://github.com/yixiu001/Figurebed/raw/main/youtube/US.KG注册.png</a></td>
+                <td><a href="https://cdn.jsdelivr.net/gh/yixiu001/Figurebed@main/youtube/US.KG注册.png" target="_blank">https://cdn.jsdelivr.net/gh/yixiu001/Figurebed@main/youtube/US.KG注册.png</a></td>
+            </tr>
+            
+            <tr>
                 <td><img src="https://github.com/yixiu001/Figurebed/raw/main/blog/svg/一休-下班啦.svg" alt="一休-下班啦.svg"></td>
                 <td><a href="https://github.com/yixiu001/Figurebed/raw/main/blog/svg/一休-下班啦.svg" target="_blank">https://github.com/yixiu001/Figurebed/raw/main/blog/svg/一休-下班啦.svg</a></td>
                 <td><a href="https://cdn.jsdelivr.net/gh/yixiu001/Figurebed@main/blog/svg/一休-下班啦.svg" target="_blank">https://cdn.jsdelivr.net/gh/yixiu001/Figurebed@main/blog/svg/一休-下班啦.svg</a></td>
