--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@
             </tr>
             
             <tr>
+                <td><img src="https://github.com/yixiu001/Figurebed/raw/main/youtube/美区AppleID.webp" alt="美区AppleID.webp"></td>
+                <td><a href="https://github.com/yixiu001/Figurebed/raw/main/youtube/美区AppleID.webp" target="_blank">https://github.com/yixiu001/Figurebed/raw/main/youtube/美区AppleID.webp</a></td>
+                <td><a href="https://cdn.jsdelivr.net/gh/yixiu001/Figurebed@main/youtube/美区AppleID.webp" target="_blank">https://cdn.jsdelivr.net/gh/yixiu001/Figurebed@main/youtube/美区AppleID.webp</a></td>
+            </tr>
+            
+            <tr>
                 <td><img src="https://github.com/yixiu001/Figurebed/raw/main/youtube/ClouDNS注册.webp" alt="ClouDNS注册.webp"></td>
                 <td><a href="https://github.com/yixiu001/Figurebed/raw/main/youtube/ClouDNS注册.webp" target="_blank">https://github.com/yixiu001/Figurebed/raw/main/youtube/ClouDNS注册.webp</a></td>
                 <td><a href="https://cdn.jsdelivr.net/gh/yixiu001/Figurebed@main/youtube/ClouDNS注册.webp" target="_blank">https://cdn.jsdelivr.net/gh/yixiu001/Figurebed@main/youtube/ClouDNS注册.webp</a></td>
