--- a/index.html
+++ b/index.html
@@ -78,6 +78,12 @@
             </tr>
             
             <tr>
+                <td><img src="https://github.com/yixiu001/Figurebed/raw/main/blog/images/地球.jpg" alt="地球.jpg"></td>
+                <td><a href="https://github.com/yixiu001/Figurebed/raw/main/blog/images/地球.jpg" target="_blank">https://github.com/yixiu001/Figurebed/raw/main/blog/images/地球.jpg</a></td>
+                <td><a href="https://cdn.jsdelivr.net/gh/yixiu001/Figurebed@main/blog/images/地球.jpg" target="_blank">https://cdn.jsdelivr.net/gh/yixiu001/Figurebed@main/blog/images/地球.jpg</a></td>
+            </tr>
+            
+            <tr>
                 <td><img src="https://github.com/yixiu001/Figurebed/raw/main/blog/images/loading.gif" alt="loading.gif"></td>
                 <td><a href="https://github.com/yixiu001/Figurebed/raw/main/blog/images/loading.gif" target="_blank">https://github.com/yixiu001/Figurebed/raw/main/blog/images/loading.gif</a></td>
                 <td><a href="https://cdn.jsdelivr.net/gh/yixiu001/Figurebed@main/blog/images/loading.gif" target="_blank">https://cdn.jsdelivr.net/gh/yixiu001/Figurebed@main/blog/images/loading.gif</a></td>
