--- a/index.html
+++ b/index.html
@@ -66,6 +66,12 @@
             </tr>
             
             <tr>
+                <td><img src="https://github.com/yixiu001/Figurebed/raw/main/blog/svg/INTP-A.svg" alt="INTP-A.svg"></td>
+                <td><a href="https://github.com/yixiu001/Figurebed/raw/main/blog/svg/INTP-A.svg" target="_blank">https://github.com/yixiu001/Figurebed/raw/main/blog/svg/INTP-A.svg</a></td>
+                <td><a href="https://cdn.jsdelivr.net/gh/yixiu001/Figurebed@main/blog/svg/INTP-A.svg" target="_blank">https://cdn.jsdelivr.net/gh/yixiu001/Figurebed@main/blog/svg/INTP-A.svg</a></td>
+            </tr>
+            
+            <tr>
                 <td><img src="https://github.com/yixiu001/Figurebed/raw/main/blog/svg/一休-上班摸鱼中.svg" alt="一休-上班摸鱼中.svg"></td>
                 <td><a href="https://github.com/yixiu001/Figurebed/raw/main/blog/svg/一休-上班摸鱼中.svg" target="_blank">https://github.com/yixiu001/Figurebed/raw/main/blog/svg/一休-上班摸鱼中.svg</a></td>
                 <td><a href="https://cdn.jsdelivr.net/gh/yixiu001/Figurebed@main/blog/svg/一休-上班摸鱼中.svg" target="_blank">https://cdn.jsdelivr.net/gh/yixiu001/Figurebed@main/blog/svg/一休-上班摸鱼中.svg</a></td>
