--- a/index.html
+++ b/index.html
@@ -46,13 +46,18 @@
                     justify-content: center;
                 }
                 .gallery-item {
-                    flex: 1 1 200px;
-                    max-width: 200px;
+                    width: 200px;
+                    height: 200px;
                     text-align: center;
+                    overflow: hidden;
+                    border: 1px solid #ddd;
+                    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+                    background-color: #fff;
                 }
                 .gallery-item img {
-                    max-width: 100%;
-                    height: auto;
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
                 }
                 .gallery-item a {
                     display: block;
