--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@
                 <h1>一休github简易图床系统</h1>
             </header>
             <nav>
-        <a href="#youtube">youtube</a><a href="#blog/svg">blog/svg</a><a href="#blog/images">blog/images</a><a href="#blog/creativity">blog/creativity</a><a href="#blog/about">blog/about</a><a href="#blog/bg">blog/bg</a><a href="images.json" download>导出所有图片信息</a>
+        <a href="#youtube">youtube</a><a href="#blog/svg">blog/svg</a><a href="#blog/images">blog/images</a><a href="#blog/creativity">blog/creativity</a><a href="#blog/about">blog/about</a><a href="#blog/bg">blog/bg</a><a href="json/images.json" download>导出所有图片信息</a>
             </nav>
             <div class="container">
-        <h2 id="youtube">youtube <a href="images_youtube.json" download>导出该分类图片信息</a></h2><div class="gallery">
+        <h2 id="youtube">youtube <a href="json/images_youtube.json" download>导出该分类图片信息</a></h2><div class="gallery">
                 <div class="gallery-item">
                     <img src="https://github.com/yixiu001/Figurebed/raw/main/youtube/US.KG注册.png" alt="US.KG注册.png">
                     <div class="link-overlay">
@@ -142,7 +142,7 @@
                         <a href="https://cdn.jsdelivr.net/gh/yixiu001/Figurebed@main/youtube/ClouDNS注册.webp" target="_blank" onclick="copyToClipboard('https://cdn.jsdelivr.net/gh/yixiu001/Figurebed@main/youtube/ClouDNS注册.webp'); return false;">jsdelivr CDN 加速地址</a>
                     </div>
                 </div>
-                </div><h2 id="blog/svg">blog/svg <a href="images_blog/svg.json" download>导出该分类图片信息</a></h2><div class="gallery">
+                </div><h2 id="blog/svg">blog/svg <a href="json/images_blog/svg.json" download>导出该分类图片信息</a></h2><div class="gallery">
                 <div class="gallery-item">
                     <img src="https://github.com/yixiu001/Figurebed/raw/main/blog/svg/一休-下班啦.svg" alt="一休-下班啦.svg">
                     <div class="link-overlay">
@@ -166,7 +166,7 @@
                         <a href="https://cdn.jsdelivr.net/gh/yixiu001/Figurebed@main/blog/svg/一休-上班摸鱼中.svg" target="_blank" onclick="copyToClipboard('https://cdn.jsdelivr.net/gh/yixiu001/Figurebed@main/blog/svg/一休-上班摸鱼中.svg'); return false;">jsdelivr CDN 加速地址</a>
                     </div>
                 </div>
-                </div><h2 id="blog/images">blog/images <a href="images_blog/images.json" download>导出该分类图片信息</a></h2><div class="gallery">
+                </div><h2 id="blog/images">blog/images <a href="json/images_blog/images.json" download>导出该分类图片信息</a></h2><div class="gallery">
                 <div class="gallery-item">
                     <img src="https://github.com/yixiu001/Figurebed/raw/main/blog/images/error_404.gif" alt="error_404.gif">
                     <div class="link-overlay">
@@ -198,7 +198,7 @@
                         <a href="https://cdn.jsdelivr.net/gh/yixiu001/Figurebed@main/blog/images/404.gif" target="_blank" onclick="copyToClipboard('https://cdn.jsdelivr.net/gh/yixiu001/Figurebed@main/blog/images/404.gif'); return false;">jsdelivr CDN 加速地址</a>
                     </div>
                 </div>
-                </div><h2 id="blog/creativity">blog/creativity <a href="images_blog/creativity.json" download>导出该分类图片信息</a></h2><div class="gallery">
+                </div><h2 id="blog/creativity">blog/creativity <a href="json/images_blog/creativity.json" download>导出该分类图片信息</a></h2><div class="gallery">
                 <div class="gallery-item">
                     <img src="https://github.com/yixiu001/Figurebed/raw/main/blog/creativity/Git.webp" alt="Git.webp">
                     <div class="link-overlay">
@@ -318,7 +318,7 @@
                         <a href="https://cdn.jsdelivr.net/gh/yixiu001/Figurebed@main/blog/creativity/Node.svg" target="_blank" onclick="copyToClipboard('https://cdn.jsdelivr.net/gh/yixiu001/Figurebed@main/blog/creativity/Node.svg'); return false;">jsdelivr CDN 加速地址</a>
                     </div>
                 </div>
-                </div><h2 id="blog/about">blog/about <a href="images_blog/about.json" download>导出该分类图片信息</a></h2><div class="gallery">
+                </div><h2 id="blog/about">blog/about <a href="json/images_blog/about.json" download>导出该分类图片信息</a></h2><div class="gallery">
                 <div class="gallery-item">
                     <img src="https://github.com/yixiu001/Figurebed/raw/main/blog/about/favicon.ico" alt="favicon.ico">
                     <div class="link-overlay">
@@ -350,7 +350,7 @@
                         <a href="https://cdn.jsdelivr.net/gh/yixiu001/Figurebed@main/blog/about/wechatpay.png" target="_blank" onclick="copyToClipboard('https://cdn.jsdelivr.net/gh/yixiu001/Figurebed@main/blog/about/wechatpay.png'); return false;">jsdelivr CDN 加速地址</a>
                     </div>
                 </div>
-                </div><h2 id="blog/bg">blog/bg <a href="images_blog/bg.json" download>导出该分类图片信息</a></h2><div class="gallery">
+                </div><h2 id="blog/bg">blog/bg <a href="json/images_blog/bg.json" download>导出该分类图片信息</a></h2><div class="gallery">
                 <div class="gallery-item">
                     <img src="https://github.com/yixiu001/Figurebed/raw/main/blog/bg/bg4.jpg" alt="bg4.jpg">
                     <div class="link-overlay">
