--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
                 </div>
             </div>
             <footer>
-                &copy; 2024 一休github简易图床系统
+                &copy; <a href="https://github.com/yixiu001/Figurebed" >2024 a一休github简易图床系统</a>
             </footer>
         </body>
         </html>
