--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             </header>
             <div id="category-toggle" onclick="toggleCategoryNav()">分类</div>
             <nav id="category-nav">
-        <a href="#youtube" onclick="toggleCategoryNav()">youtube</a><a href="#blog/svg" onclick="toggleCategoryNav()">blog/svg</a><a href="#blog/images" onclick="toggleCategoryNav()">blog/images</a><a href="#blog/creativity" onclick="toggleCategoryNav()">blog/creativity</a><a href="#blog/about" onclick="toggleCategoryNav()">blog/about</a><a href="#blog/bg" onclick="toggleCategoryNav()">blog/bg</a><a href="json/images.json" download style="color: yellow;">导出所有图片信息</a>
+        <a href="#youtube" onclick="toggleCategoryNav()">youtube</a><a href="#blog/svg" onclick="toggleCategoryNav()">blog/svg</a><a href="#blog/post" onclick="toggleCategoryNav()">blog/post</a><a href="#blog/images" onclick="toggleCategoryNav()">blog/images</a><a href="#blog/creativity" onclick="toggleCategoryNav()">blog/creativity</a><a href="#blog/about" onclick="toggleCategoryNav()">blog/about</a><a href="#blog/bg" onclick="toggleCategoryNav()">blog/bg</a><a href="json/images.json" download style="color: yellow;">导出所有图片信息</a>
             </nav>
             <div class="container">
         <h2 id="youtube">youtube <a href="json/images_youtube.json" download style="color: yellow;">导出该分类图片信息</a></h2><div class="gallery">
@@ -204,6 +204,14 @@
                     <div class="link-overlay">
                         <a href="https://github.com/yixiu001/Figurebed/raw/main/blog/svg/一休-上班摸鱼中.svg" target="_blank" onclick="copyToClipboard('https://github.com/yixiu001/Figurebed/raw/main/blog/svg/一休-上班摸鱼中.svg'); return false;">HTTPS 访问地址</a>
                         <a href="https://cdn.jsdelivr.net/gh/yixiu001/Figurebed@main/blog/svg/一休-上班摸鱼中.svg" target="_blank" onclick="copyToClipboard('https://cdn.jsdelivr.net/gh/yixiu001/Figurebed@main/blog/svg/一休-上班摸鱼中.svg'); return false;">jsdelivr CDN 加速地址</a>
+                    </div>
+                </div>
+                </div><h2 id="blog/post">blog/post <a href="json/images_blog/post.json" download style="color: yellow;">导出该分类图片信息</a></h2><div class="gallery">
+                <div class="gallery-item">
+                    <img src="https://cdn.jsdelivr.net/gh/yixiu001/Figurebed@main/blog/post/us.kg504bug.png" alt="us.kg504bug.png" onerror="this.onerror=null;this.src='https://github.com/yixiu001/Figurebed/raw/main/blog/post/us.kg504bug.png';">
+                    <div class="link-overlay">
+                        <a href="https://github.com/yixiu001/Figurebed/raw/main/blog/post/us.kg504bug.png" target="_blank" onclick="copyToClipboard('https://github.com/yixiu001/Figurebed/raw/main/blog/post/us.kg504bug.png'); return false;">HTTPS 访问地址</a>
+                        <a href="https://cdn.jsdelivr.net/gh/yixiu001/Figurebed@main/blog/post/us.kg504bug.png" target="_blank" onclick="copyToClipboard('https://cdn.jsdelivr.net/gh/yixiu001/Figurebed@main/blog/post/us.kg504bug.png'); return false;">jsdelivr CDN 加速地址</a>
                     </div>
                 </div>
                 </div><h2 id="blog/images">blog/images <a href="json/images_blog/images.json" download style="color: yellow;">导出该分类图片信息</a></h2><div class="gallery">
