--- a/index.html
+++ b/index.html
@@ -182,6 +182,14 @@
                         <a href="https://cdn.jsdelivr.net/gh/yixiu001/Figurebed@main/youtube/ClouDNS注册.webp" target="_blank" onclick="copyToClipboard('https://cdn.jsdelivr.net/gh/yixiu001/Figurebed@main/youtube/ClouDNS注册.webp'); return false;">jsdelivr CDN 加速地址</a>
                     </div>
                 </div>
+                
+                <div class="gallery-item">
+                    <img src="https://cdn.jsdelivr.net/gh/yixiu001/Figurebed@main/youtube/无限免费邮箱.png" alt="无限免费邮箱.png" onerror="this.onerror=null;this.src='https://github.com/yixiu001/Figurebed/raw/main/youtube/无限免费邮箱.png';">
+                    <div class="link-overlay">
+                        <a href="https://github.com/yixiu001/Figurebed/raw/main/youtube/无限免费邮箱.png" target="_blank" onclick="copyToClipboard('https://github.com/yixiu001/Figurebed/raw/main/youtube/无限免费邮箱.png'); return false;">HTTPS 访问地址</a>
+                        <a href="https://cdn.jsdelivr.net/gh/yixiu001/Figurebed@main/youtube/无限免费邮箱.png" target="_blank" onclick="copyToClipboard('https://cdn.jsdelivr.net/gh/yixiu001/Figurebed@main/youtube/无限免费邮箱.png'); return false;">jsdelivr CDN 加速地址</a>
+                    </div>
+                </div>
                 </div><h2 id="blog/svg">blog/svg <a href="json/images_blog/svg.json" download style="color: yellow;">导出该分类图片信息</a></h2><div class="gallery">
                 <div class="gallery-item">
                     <img src="https://cdn.jsdelivr.net/gh/yixiu001/Figurebed@main/blog/svg/一休-下班啦.svg" alt="一休-下班啦.svg" onerror="this.onerror=null;this.src='https://github.com/yixiu001/Figurebed/raw/main/blog/svg/一休-下班啦.svg';">
