--- a/index.html
+++ b/index.html
@@ -176,6 +176,14 @@
                 </div>
                 
                 <div class="gallery-item">
+                    <img src="https://cdn.jsdelivr.net/gh/yixiu001/Figurebed@main/youtube/FreeServ00-re.png" alt="FreeServ00-re.png" onerror="this.onerror=null;this.src='https://github.com/yixiu001/Figurebed/raw/main/youtube/FreeServ00-re.png';">
+                    <div class="link-overlay">
+                        <a href="https://github.com/yixiu001/Figurebed/raw/main/youtube/FreeServ00-re.png" target="_blank" onclick="copyToClipboard('https://github.com/yixiu001/Figurebed/raw/main/youtube/FreeServ00-re.png'); return false;">HTTPS 访问地址</a>
+                        <a href="https://cdn.jsdelivr.net/gh/yixiu001/Figurebed@main/youtube/FreeServ00-re.png" target="_blank" onclick="copyToClipboard('https://cdn.jsdelivr.net/gh/yixiu001/Figurebed@main/youtube/FreeServ00-re.png'); return false;">jsdelivr CDN 加速地址</a>
+                    </div>
+                </div>
+                
+                <div class="gallery-item">
                     <img src="https://cdn.jsdelivr.net/gh/yixiu001/Figurebed@main/youtube/ClouDNS注册.webp" alt="ClouDNS注册.webp" onerror="this.onerror=null;this.src='https://github.com/yixiu001/Figurebed/raw/main/youtube/ClouDNS注册.webp';">
                     <div class="link-overlay">
                         <a href="https://github.com/yixiu001/Figurebed/raw/main/youtube/ClouDNS注册.webp" target="_blank" onclick="copyToClipboard('https://github.com/yixiu001/Figurebed/raw/main/youtube/ClouDNS注册.webp'); return false;">HTTPS 访问地址</a>
