--- a/index.html
+++ b/index.html
@@ -232,6 +232,14 @@
                 </div>
                 </div><h2 id="blog/images">blog/images <a href="json/images_blog/images.json" download style="color: yellow;">导出该分类图片信息</a></h2><div class="gallery">
                 <div class="gallery-item">
+                    <img src="https://cdn.jsdelivr.net/gh/yixiu001/Figurebed@main/blog/images/code.jpg" alt="code.jpg" onerror="this.onerror=null;this.src='https://github.com/yixiu001/Figurebed/raw/main/blog/images/code.jpg';">
+                    <div class="link-overlay">
+                        <a href="https://github.com/yixiu001/Figurebed/raw/main/blog/images/code.jpg" target="_blank" onclick="copyToClipboard('https://github.com/yixiu001/Figurebed/raw/main/blog/images/code.jpg'); return false;">HTTPS 访问地址</a>
+                        <a href="https://cdn.jsdelivr.net/gh/yixiu001/Figurebed@main/blog/images/code.jpg" target="_blank" onclick="copyToClipboard('https://cdn.jsdelivr.net/gh/yixiu001/Figurebed@main/blog/images/code.jpg'); return false;">jsdelivr CDN 加速地址</a>
+                    </div>
+                </div>
+                
+                <div class="gallery-item">
                     <img src="https://cdn.jsdelivr.net/gh/yixiu001/Figurebed@main/blog/images/error_404.gif" alt="error_404.gif" onerror="this.onerror=null;this.src='https://github.com/yixiu001/Figurebed/raw/main/blog/images/error_404.gif';">
                     <div class="link-overlay">
                         <a href="https://github.com/yixiu001/Figurebed/raw/main/blog/images/error_404.gif" target="_blank" onclick="copyToClipboard('https://github.com/yixiu001/Figurebed/raw/main/blog/images/error_404.gif'); return false;">HTTPS 访问地址</a>
