--- a/index.html
+++ b/index.html
@@ -224,6 +224,14 @@
                 </div>
                 </div><h2 id="blog/post">blog/post <a href="json/images_blog/post.json" download style="color: yellow;">导出该分类图片信息</a></h2><div class="gallery">
                 <div class="gallery-item">
+                    <img src="https://cdn.jsdelivr.net/gh/yixiu001/Figurebed@main/blog/post/serv00账号信息.png" alt="serv00账号信息.png" onerror="this.onerror=null;this.src='https://github.com/yixiu001/Figurebed/raw/main/blog/post/serv00账号信息.png';">
+                    <div class="link-overlay">
+                        <a href="https://github.com/yixiu001/Figurebed/raw/main/blog/post/serv00账号信息.png" target="_blank" onclick="copyToClipboard('https://github.com/yixiu001/Figurebed/raw/main/blog/post/serv00账号信息.png'); return false;">HTTPS 访问地址</a>
+                        <a href="https://cdn.jsdelivr.net/gh/yixiu001/Figurebed@main/blog/post/serv00账号信息.png" target="_blank" onclick="copyToClipboard('https://cdn.jsdelivr.net/gh/yixiu001/Figurebed@main/blog/post/serv00账号信息.png'); return false;">jsdelivr CDN 加速地址</a>
+                    </div>
+                </div>
+                
+                <div class="gallery-item">
                     <img src="https://cdn.jsdelivr.net/gh/yixiu001/Figurebed@main/blog/post/us.kg504bug.png" alt="us.kg504bug.png" onerror="this.onerror=null;this.src='https://github.com/yixiu001/Figurebed/raw/main/blog/post/us.kg504bug.png';">
                     <div class="link-overlay">
                         <a href="https://github.com/yixiu001/Figurebed/raw/main/blog/post/us.kg504bug.png" target="_blank" onclick="copyToClipboard('https://github.com/yixiu001/Figurebed/raw/main/blog/post/us.kg504bug.png'); return false;">HTTPS 访问地址</a>
