--- a/index.html
+++ b/index.html
@@ -304,6 +304,14 @@
                 </div>
                 
                 <div class="gallery-item">
+                    <img src="https://cdn.jsdelivr.net/gh/yixiu001/Figurebed@main/blog/post/telegrambg.jpg" alt="telegrambg.jpg" onerror="this.onerror=null;this.src='https://github.com/yixiu001/Figurebed/raw/main/blog/post/telegrambg.jpg';">
+                    <div class="link-overlay">
+                        <a href="https://github.com/yixiu001/Figurebed/raw/main/blog/post/telegrambg.jpg" target="_blank" onclick="copyToClipboard('https://github.com/yixiu001/Figurebed/raw/main/blog/post/telegrambg.jpg'); return false;">HTTPS 访问地址</a>
+                        <a href="https://cdn.jsdelivr.net/gh/yixiu001/Figurebed@main/blog/post/telegrambg.jpg" target="_blank" onclick="copyToClipboard('https://cdn.jsdelivr.net/gh/yixiu001/Figurebed@main/blog/post/telegrambg.jpg'); return false;">jsdelivr CDN 加速地址</a>
+                    </div>
+                </div>
+                
+                <div class="gallery-item">
                     <img src="https://cdn.jsdelivr.net/gh/yixiu001/Figurebed@main/blog/post/us.kg504bug.png" alt="us.kg504bug.png" onerror="this.onerror=null;this.src='https://github.com/yixiu001/Figurebed/raw/main/blog/post/us.kg504bug.png';">
                     <div class="link-overlay">
                         <a href="https://github.com/yixiu001/Figurebed/raw/main/blog/post/us.kg504bug.png" target="_blank" onclick="copyToClipboard('https://github.com/yixiu001/Figurebed/raw/main/blog/post/us.kg504bug.png'); return false;">HTTPS 访问地址</a>
