--- a/index.html
+++ b/index.html
@@ -288,6 +288,14 @@
                 </div>
                 
                 <div class="gallery-item">
+                    <img src="https://cdn.jsdelivr.net/gh/yixiu001/Figurebed@main/blog/post/telegramre.jpg" alt="telegramre.jpg" onerror="this.onerror=null;this.src='https://github.com/yixiu001/Figurebed/raw/main/blog/post/telegramre.jpg';">
+                    <div class="link-overlay">
+                        <a href="https://github.com/yixiu001/Figurebed/raw/main/blog/post/telegramre.jpg" target="_blank" onclick="copyToClipboard('https://github.com/yixiu001/Figurebed/raw/main/blog/post/telegramre.jpg'); return false;">HTTPS 访问地址</a>
+                        <a href="https://cdn.jsdelivr.net/gh/yixiu001/Figurebed@main/blog/post/telegramre.jpg" target="_blank" onclick="copyToClipboard('https://cdn.jsdelivr.net/gh/yixiu001/Figurebed@main/blog/post/telegramre.jpg'); return false;">jsdelivr CDN 加速地址</a>
+                    </div>
+                </div>
+                
+                <div class="gallery-item">
                     <img src="https://cdn.jsdelivr.net/gh/yixiu001/Figurebed@main/blog/post/serv00qx.png" alt="serv00qx.png" onerror="this.onerror=null;this.src='https://github.com/yixiu001/Figurebed/raw/main/blog/post/serv00qx.png';">
                     <div class="link-overlay">
                         <a href="https://github.com/yixiu001/Figurebed/raw/main/blog/post/serv00qx.png" target="_blank" onclick="copyToClipboard('https://github.com/yixiu001/Figurebed/raw/main/blog/post/serv00qx.png'); return false;">HTTPS 访问地址</a>
