--- a/index.html
+++ b/index.html
@@ -216,6 +216,14 @@
                 </div>
                 
                 <div class="gallery-item">
+                    <img src="https://cdn.jsdelivr.net/gh/yixiu001/Figurebed@main/youtube/自动获取节点.jpg" alt="自动获取节点.jpg" onerror="this.onerror=null;this.src='https://github.com/yixiu001/Figurebed/raw/main/youtube/自动获取节点.jpg';">
+                    <div class="link-overlay">
+                        <a href="https://github.com/yixiu001/Figurebed/raw/main/youtube/自动获取节点.jpg" target="_blank" onclick="copyToClipboard('https://github.com/yixiu001/Figurebed/raw/main/youtube/自动获取节点.jpg'); return false;">HTTPS 访问地址</a>
+                        <a href="https://cdn.jsdelivr.net/gh/yixiu001/Figurebed@main/youtube/自动获取节点.jpg" target="_blank" onclick="copyToClipboard('https://cdn.jsdelivr.net/gh/yixiu001/Figurebed@main/youtube/自动获取节点.jpg'); return false;">jsdelivr CDN 加速地址</a>
+                    </div>
+                </div>
+                
+                <div class="gallery-item">
                     <img src="https://cdn.jsdelivr.net/gh/yixiu001/Figurebed@main/youtube/KX上网.jpg" alt="KX上网.jpg" onerror="this.onerror=null;this.src='https://github.com/yixiu001/Figurebed/raw/main/youtube/KX上网.jpg';">
                     <div class="link-overlay">
                         <a href="https://github.com/yixiu001/Figurebed/raw/main/youtube/KX上网.jpg" target="_blank" onclick="copyToClipboard('https://github.com/yixiu001/Figurebed/raw/main/youtube/KX上网.jpg'); return false;">HTTPS 访问地址</a>
