--- a/index.html
+++ b/index.html
@@ -160,6 +160,14 @@
             <div class="container">
         <h2 id="youtube">youtube <a href="json/images_youtube.json" download style="color: yellow;">导出该分类图片信息</a></h2><div class="gallery">
                 <div class="gallery-item">
+                    <img src="https://cdn.jsdelivr.net/gh/yixiu001/Figurebed@main/youtube/gnamedomain.jpg" alt="gnamedomain.jpg" onerror="this.onerror=null;this.src='https://github.com/yixiu001/Figurebed/raw/main/youtube/gnamedomain.jpg';">
+                    <div class="link-overlay">
+                        <a href="https://github.com/yixiu001/Figurebed/raw/main/youtube/gnamedomain.jpg" target="_blank" onclick="copyToClipboard('https://github.com/yixiu001/Figurebed/raw/main/youtube/gnamedomain.jpg'); return false;">HTTPS 访问地址</a>
+                        <a href="https://cdn.jsdelivr.net/gh/yixiu001/Figurebed@main/youtube/gnamedomain.jpg" target="_blank" onclick="copyToClipboard('https://cdn.jsdelivr.net/gh/yixiu001/Figurebed@main/youtube/gnamedomain.jpg'); return false;">jsdelivr CDN 加速地址</a>
+                    </div>
+                </div>
+                
+                <div class="gallery-item">
                     <img src="https://cdn.jsdelivr.net/gh/yixiu001/Figurebed@main/youtube/serv00singbox.jpg" alt="serv00singbox.jpg" onerror="this.onerror=null;this.src='https://github.com/yixiu001/Figurebed/raw/main/youtube/serv00singbox.jpg';">
                     <div class="link-overlay">
                         <a href="https://github.com/yixiu001/Figurebed/raw/main/youtube/serv00singbox.jpg" target="_blank" onclick="copyToClipboard('https://github.com/yixiu001/Figurebed/raw/main/youtube/serv00singbox.jpg'); return false;">HTTPS 访问地址</a>
